--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-builders/custom-webpack": "^8.2.0",
+    "@angular-builders/dev-server": "^7.3.1",
     "@angular/animations": "~8.2.4",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
@@ -20,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "rxjs": "~6.4.0",
+    "tailwindcss": "^1.1.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
