--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@types/papaparse": "^5.0.2",
+    "axios": "^0.19.0",
+    "csvtojson": "^2.0.10",
+    "papaparse": "^5.1.0",
     "rxjs": "~6.4.0",
     "tailwindcss": "^1.1.3",
     "tslib": "^1.10.0",
@@ -31,9 +35,9 @@
     "@angular/cli": "~8.3.2",
     "@angular/compiler-cli": "~8.2.4",
     "@angular/language-service": "~8.2.4",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.10.59",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
